--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
-  number: 0
+  number: 1
 
 requirements:
   host:
@@ -27,13 +27,27 @@ requirements:
     - matplotlib-base
     - jax >=0.4.3,<=0.4.23
     - flax >=0.6.1,<=0.7.5
+    - chex >= 0.1.7
+    - optax >= 0.1.5
     - orbax-checkpoint
     - pyabel >=0.9.0
+    - xdesign >= 0.5.5
+    - astra-toolbox
+    - svmbir >= 0.3.3
+    - ray-dashboard >= 2.5.0
+    - ray-train >= 2.5.0
+    - ray-tune >= 2.5.0
+    - hyperopt
 
 test:
   imports:
     - scico
     - scico.data
+    - scico.flax
+  commands:
+    - pip check
+  requires:
+    - pip
 
 about:
   home: https://github.com/lanl/scico
