--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
-  number: 1
+  number: 2
 
 requirements:
   host:
@@ -24,6 +24,7 @@ requirements:
     - numpy >=1.20.0
     - scipy >=1.6.0
     - imageio >=2.17
+    - tifffile
     - matplotlib-base
     - jax >=0.4.3,<=0.4.23
     - flax >=0.6.1,<=0.7.5
