--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,21 +16,22 @@ build:
 
 requirements:
   host:
-    - python >=3.8
+    - python >=3.9
     - pip
+    - setuptools
   run:
-    - python >=3.8
+    - python >=3.9
     - typing_extensions
     - numpy >=1.20.0
     - scipy >=1.6.0
     - imageio >=2.17
     - tifffile
     - matplotlib-base
-    - jax >=0.4.3,<=0.4.23
-    - flax >=0.6.1,<=0.7.5
+    - jax >=0.4.13,<=0.4.35
+    - flax >=0.8.0,<=0.10.0
     - chex >=0.1.7
     - optax >=0.1.5
-    - orbax-checkpoint
+    - orbax-checkpoint >= 0.5.0
     - pyabel >=0.9.0
     - xdesign >=0.5.5
     - astra-toolbox
