--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,9 +29,8 @@ requirements:
     - matplotlib-base
     - jax >=0.4.13,<=0.4.35
     - flax >=0.8.0,<=0.10.0
-    - chex >=0.1.7
-    - optax >=0.1.5
-    - orbax-checkpoint >=0.5.0
+    - optax >=0.20.
+    - orbax-checkpoint >=0.4.4
     - pyabel >=0.9.0
     - xdesign >=0.5.5
     - astra-toolbox
