--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,8 @@ requirements:
     - imageio >=2.17
     - tifffile
     - matplotlib-base
-    - jax >=0.4.13,<=0.4.35
+    - jaxlib >=0.4.30,<=0.4.35
+    - jax >=0.4.30,<=0.4.35
     - flax >=0.8.0,<=0.10.0
     - optax >=0.2.0
     - orbax-checkpoint >=0.4.4
